--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -44,4 +44,23 @@
   .icon-list-no-image-highlights__symbol { font-size: 0.667em; top: -15px; }
   .icon-list-no-image-highlights__title { font-size: 1.125em; margin-bottom: 15px; } }
 
+.eaton-top-list-with-icon { margin-top: 45px; overflow: hidden; }
+
+.eaton-top-list-with-icon__icon { color: #ED8B00; max-width: 60px; display: inline-block; }
+
+.eaton-top-list-with-icon__icon .icon { font-size: 60px; padding: 0; }
+
+.eaton-top-list-with-icon__text-wrapper { width: calc(100% - 90px); display: inline-block; float: right; }
+
+.eaton-top-list-with-icon__element { margin-bottom: 45px; }
+
+@media screen and (min-width: 992px) { .eaton-top-list-with-icon { margin-top: 90px; }
+  .eaton-top-list-with-icon__icon { max-width: 70px; }
+  .eaton-top-list-with-icon__icon .icon { font-size: 70px; }
+  .eaton-top-list-with-icon__text-wrapper { width: calc(100% - 100px); }
+  .eaton-top-list-with-icon__element { margin-bottom: 90px; }
+  .eaton-top-list-with-icon .container { margin: 0 auto; }
+  .eaton-top-list-with-icon .container.row { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+  .eaton-top-list-with-icon .container.row .row { margin: 0; } }
+
 .icon-list { padding: 30px 0; }
