--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -12,7 +12,7 @@
   //-----------------------------------
   &__slide-preview { border: 1px solid indianred; }
 
-  &__arrows { border: 1px solid mediumseagreen; }
+  &__slide-container &__arrows { border: 1px solid mediumseagreen; }
 
 
   //-----------------------------------
@@ -115,6 +115,14 @@
       color: $color__primary-blue;
       top: 50%;
       transform: translateY(-50%);
+    }
+  }
+
+  &__thumbnail-item {
+    margin: 0 30px;
+
+    &:focus {
+      outline: 0;
     }
   }
 
