--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -1,6 +1,6 @@
 .module-media-gallery__slide-preview { border: 1px solid indianred; }
 
-.module-media-gallery__arrows { border: 1px solid mediumseagreen; }
+.module-media-gallery__slide-container .module-media-gallery__arrows { border: 1px solid mediumseagreen; }
 
 .module-media-gallery__header, .module-media-gallery__description { margin-bottom: 30px; }
 
@@ -35,6 +35,10 @@
 .module-media-gallery__thumbnail-list { padding: 0; margin: 0; list-style-type: none; }
 
 .module-media-gallery__thumbnail-container .module-media-gallery__arrows { color: #005EB8; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+
+.module-media-gallery__thumbnail-item { margin: 0 30px; }
+
+.module-media-gallery__thumbnail-item:focus { outline: 0; }
 
 .module-media-gallery__thumbnail-image-wrapper img { height: 100%; width: auto; margin-left: auto; margin-right: auto; }
 
