--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -119,14 +119,13 @@
   }
 
   &__thumbnail-item {
-    margin: 0 30px;
-
     &:focus {
       outline: 0;
     }
   }
 
   &__thumbnail-image-wrapper {
+    padding: 0;
 
     img {
       height: 100%;
@@ -186,12 +185,11 @@
       }
     }
 
-    &__thumbnail-image-wrapper {
-      padding: ($spacing__sm / 2);
-    }
 
     &__thumbnail-item {
       position: relative;
+      margin: 0 30px;
+      padding-bottom: 10px;
 
       &.active {
 
@@ -204,6 +202,15 @@
           bottom: 0;
         }
       }
+    }
+
+    // Thumbnail buttons
+    &__thumbnail-aspect-ratio {
+      margin: 0;
+      border: 0;
+      border-radius: 0;
+      background: none;
+      appearance: none;
     }
   }
 }
