--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -36,9 +36,9 @@
 
 .module-media-gallery__thumbnail-container .module-media-gallery__arrows { color: #005EB8; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
 
-.module-media-gallery__thumbnail-item { margin: 0 30px; }
-
 .module-media-gallery__thumbnail-item:focus { outline: 0; }
+
+.module-media-gallery__thumbnail-image-wrapper { padding: 0; }
 
 .module-media-gallery__thumbnail-image-wrapper img { height: 100%; width: auto; margin-left: auto; margin-right: auto; }
 
@@ -48,6 +48,6 @@
   .module-media-gallery__slide-container .module-media-gallery__arrows .icon { font-size: 37px; }
   .module-media-gallery__slide-info { margin: 30px 0 30px; }
   .module-media-gallery__thumbnail-container .module-media-gallery__arrows .icon { font-size: 12px; }
-  .module-media-gallery__thumbnail-image-wrapper { padding: 15px; }
-  .module-media-gallery__thumbnail-item { position: relative; }
-  .module-media-gallery__thumbnail-item.active:after { content: ''; position: absolute; height: 2px; width: 100%; background: #005EB8; bottom: 0; } }
+  .module-media-gallery__thumbnail-item { position: relative; margin: 0 30px; padding-bottom: 10px; }
+  .module-media-gallery__thumbnail-item.active:after { content: ''; position: absolute; height: 2px; width: 100%; background: #005EB8; bottom: 0; }
+  .module-media-gallery__thumbnail-aspect-ratio { margin: 0; border: 0; border-radius: 0; background: none; -webkit-appearance: none; -moz-appearance: none; appearance: none; } }
