--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -1,3 +1,5 @@
+.container-full { overflow-x: hidden; }
+
 .carousel-component-slide__caption { top: 0; }
 
 .carousel-component-slide__cta { margin-top: 30px; }
