--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -14,7 +14,6 @@
 
   &__slide-container &__arrows { border: 1px solid mediumseagreen; }
 
-
   //-----------------------------------
   // Gallery Headline & Description
   //-----------------------------------
@@ -26,7 +25,6 @@
   &__headline {
     margin-bottom: $spacing__sm;
   }
-
 
   //-----------------------------------
   // Slide Container
@@ -50,9 +48,7 @@
       margin-left: auto;
       margin-right: auto;
     }
-
   }
-
 
   // Zoom & Download Styles
   &__slide-utility {
@@ -146,6 +142,36 @@
       // empty selector for future reference
     }
 
+    // Dot Navigation - Preview Carousel
+    //------------------------------------
+    &__dots {
+      text-align: center;
+      margin: $spacing__sm 0;
+
+      li {
+        display: inline;
+        padding-right: 10px;
+
+        &.slick-active {
+          button {
+            background-color: $color__primary-blue;
+          }
+        }
+      }
+
+      button {
+        display: inline;
+        height: 10px;
+        width: 10px;
+        border: 10px;
+        border-radius: 50%;
+        color: transparent;
+        background-color: $color__secondary-gray5;
+        line-height: 0;
+        padding: 5px;
+      }
+    }
+
     // Thumbnail Container
     //--------------
     &__thumbnail-container {
@@ -184,7 +210,6 @@
         }
       }
     }
-
 
     &__thumbnail-item {
       position: relative;
