--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -42,7 +42,11 @@
 
 .module-media-gallery__thumbnail-image-wrapper img { height: 100%; width: auto; margin-left: auto; margin-right: auto; }
 
-@media screen and (max-width: 991px) { .module-media-gallery__thumbnail-container { display: none; } }
+@media screen and (max-width: 991px) { .module-media-gallery__dots { text-align: center; margin: 30px 0; }
+  .module-media-gallery__dots li { display: inline; padding-right: 10px; }
+  .module-media-gallery__dots li.slick-active button { background-color: #005EB8; }
+  .module-media-gallery__dots button { display: inline; height: 10px; width: 10px; border: 10px; border-radius: 50%; color: transparent; background-color: #EEF0F2; line-height: 0; padding: 5px; }
+  .module-media-gallery__thumbnail-container { display: none; } }
 
 @media screen and (min-width: 992px) { .module-media-gallery { padding: 60px 0 120px; }
   .module-media-gallery__slide-container .module-media-gallery__arrows .icon { font-size: 37px; }
