--- a/eaton.frontend/src/components/header/css/_header-interactions.scss
+++ b/eaton.frontend/src/components/header/css/_header-interactions.scss
@@ -34,6 +34,11 @@
         font-size: 18px;
       }
     }
+
+    .header-utility-nav {
+      opacity: 1;
+      visibility: visible;
+    }
   }
 
   .level-2-open {
