--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -18,8 +18,7 @@
   .header-utility-nav__toggle-selector { padding: 25px 0 25px 30px; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; background: #333F48; }
   .header-utility-nav__sign-in { text-align: center; padding: 0 30px; -ms-flex-preferred-size: 100px; flex-basis: 100px; }
   .header-utility-nav__signin { display: none; }
-  .header-utility-nav .icon.icon-globe { margin-right: 5px; }
-  .nav-open .header-utility-nav { opacity: 1; visibility: visible; } }
+  .header-utility-nav .icon.icon-globe { margin-right: 5px; } }
 
 @media screen and (min-width: 992px) { .header-utility-nav { position: relative; z-index: 112; }
   .header-utility-nav__row { padding: 0 15px; }
@@ -65,6 +64,7 @@
   .nav-open .header-primary-nav__toggle-mobile-menu { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
   .nav-open .header-primary-nav__toggle-mobile-menu .icon-hamburger { display: none; }
   .nav-open .header-primary-nav__toggle-mobile-menu .icon-close { display: block; top: -3px; font-size: 18px; }
+  .nav-open .header-utility-nav { opacity: 1; visibility: visible; }
   .level-2-open { overflow: hidden; position: fixed; width: 100%; }
   .level-2-open .eaton-link-list-primary-nav { -webkit-transform: translate(-100%, 0); transform: translate(-100%, 0); }
   .level-2-open .mega-menu { -webkit-transform: translate(0, 0); transform: translate(0, 0); }
